--- a/Meilenstein 2/style.css
+++ b/Meilenstein 2/style.css
@@ -1,25 +1,35 @@
 body {
 	background-color: rgb(0,162,232);
+    height: 100%;
+    margin: 0;
 }
 
 h1 {
-	font: bold 22px Georgia, sans-serif;
-	font-align: center;
+	font: bold 22px Verdana, sans-serif;
+    text-align: center;
 	margin-top: 100px;
 	margin-bottom: 100px;
 }
 
 b h1 {
-	font: bold 22px Georgia, sans-serif;
+	font: bold 22px Verdana, sans-serif;
 	font-color: rgb(153,217,234);
 }
 
 #main {
-	width: 60%;
-	heigth: 100%;
-	align-self: center;
+    position: absolute;
+	width: 40%;
+    font-family: Verdana, sans-serif;
+    top: 0; bottom: 0; left: 20%; right: 20%;
+    padding-top: 0; padding-bottom: 0; padding-left: 10%; padding-right: 10%;
 	background-color: rgb(153,217,234);
 }
+
+table #main {
+    content-align: center;
+}
+
+
 
 #menu {
 	width: 400px;
@@ -31,7 +41,7 @@ b h1 {
 
 .button2 {
 	background-color: rgb(0,162,232);
-	font: bold 18px Georgia, sans-serif;
+	font: bold 18px Verdana, sans-serif;
 	font-align: center;
 	width: 400px;
 	heigth: 100px;
