--- a/Meilenstein 2/style.css
+++ b/Meilenstein 2/style.css
@@ -11,29 +11,26 @@ h1 {
 	margin-bottom: 100px;
 }
 
-b h1 {
-	font: bold 22px Verdana, sans-serif;
-	font-color: rgb(153,217,234);
+h1 b {
+	color: rgb(136,0,21);
 }
 
 #main {
     position: absolute;
 	width: 40%;
-    font-family: Verdana, sans-serif;
+    font: 16px Verdana, sans-serif;
     top: 0; bottom: 0; left: 20%; right: 20%;
     padding-top: 0; padding-bottom: 0; padding-left: 10%; padding-right: 10%;
 	background-color: rgb(153,217,234);
 }
 
-table #main {
-    content-align: center;
+#favourite {
+	float: left;
 }
-
-
 
 #menu {
 	width: 400px;
-	heigth: 300px;
+	height: 300px;
 	align-self: center;
 	background-color: rgb(63,72,204);
 	border: 3px solid rgb(63,72,204);
@@ -44,7 +41,7 @@ table #main {
 	font: bold 18px Verdana, sans-serif;
 	font-align: center;
 	width: 400px;
-	heigth: 100px;
+	height: 100px;
 }
 
 .button2:hover {
