--- a/Meilenstein 2/style.css
+++ b/Meilenstein 2/style.css
@@ -22,6 +22,7 @@ h1 b {
     top: 0; bottom: 0; left: 20%; right: 20%;
     padding-top: 0; padding-bottom: 0; padding-left: 10%; padding-right: 10%;
 	background-color: rgb(153,217,234);
+	text-align: center;
 }
 
 #favourite {
@@ -29,19 +30,23 @@ h1 b {
 }
 
 #menu {
+	display: table;
 	width: 400px;
 	height: 300px;
-	align-self: center;
 	background-color: rgb(63,72,204);
 	border: 3px solid rgb(63,72,204);
+	margin-left: auto;
+	margin-right: auto;
 }
 
 .button2 {
+	display: flex;
+	justify-content: space-around;
 	background-color: rgb(0,162,232);
-	font: bold 18px Verdana, sans-serif;
-	font-align: center;
+	font: bold 25px Verdana, sans-serif;
 	width: 400px;
-	height: 100px;
+	height: 70px;
+	padding-top: 30px;
 }
 
 .button2:hover {
