--- a/Meilenstein 2/style.css
+++ b/Meilenstein 2/style.css
@@ -1,6 +1,6 @@
-body {
+body, html {
 	background-color: rgb(0,162,232);
-    height: 100%;
+    height: 1200px;
     margin: 0;
 }
 
@@ -18,6 +18,7 @@ h1 b {
 #main {
     position: absolute;
 	width: 40%;
+	height: 1200px;
     font: 16px Verdana, sans-serif;
     top: 0; bottom: 0; left: 20%; right: 20%;
     padding-top: 0; padding-bottom: 0; padding-left: 10%; padding-right: 10%;
