--- a/Meilenstein 2/style.css
+++ b/Meilenstein 2/style.css
@@ -72,6 +72,25 @@ h1 b {
     text-decoration: none;
 }
 
+#table01 table {
+    width:100%;
+    text-align: left;
+    border-collapse: collapse;
+    border: 3px solid black;
+}
+
+#table01 th {
+    font-size: 14px;
+    border: 3px solid black;
+    padding: 5px;
+}
+
+#table01 td {
+    font-size: 12px;
+    border: 1px solid black;
+    padding: 5px;
+}
+
 .button2 {
     display: flex;
     justify-content: space-around;
