--- a/Meilenstein 2/style.css
+++ b/Meilenstein 2/style.css
@@ -45,7 +45,25 @@ h1 b {
 #auswahl{
     float: left;
 }
+#tablebuttons{
+    width:100%;
+    font-size: 20px;
 
+}
+
+#tablebutton1{
+    width:50%;
+    float: left;
+    border:3px solid black;
+    border-bottom: 0px;
+}
+#tablebutton2{
+    width:50%;
+    float: right;
+
+    border:3px solid black;
+    border-bottom: 0px;
+}
 #main {
     position: absolute;
     width: 50%;
