--- a/Meilenstein 2/style.css
+++ b/Meilenstein 2/style.css
@@ -45,29 +45,7 @@ h1 b {
 #auswahl{
     float: left;
 }
-#tablebuttons{
-    display:table;
-    width:100%;
-    font-size: 20px;
-    border-top:3px solid black;
 
-}
-
-#tablebutton1{
-    width: 49%;
-    float : left;
-    border:3px solid black;
-    border-top:0px;
-    border-bottom: 0px;
-}
-#tablebutton2{
-    float:right;
-    width:49%;
-    border:3px solid black;
-    border-left:0px;
-    border-top:0px;
-    border-bottom: 0px;
-}
 #main {
     position: absolute;
     width: 50%;
@@ -130,4 +108,29 @@ h1 b {
 
 .button2:hover {
     background-color: rgb(63,72,204);
+}
+
+
+#tablebuttons{
+    display:table;
+    width:100%;
+    border-top:3px solid black;
+}
+
+#tableButton1, #tableButton2 {
+    width: 50%;
+    font-size: 20px;
+    border:3px solid black;
+    border-top:0px;
+    border-bottom: 0px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+#tableButton1{
+    float : left;
+}
+
+#tableButton2{
+    border-left:0px;
 }
