! JavaScript Eingabe-Ausnahmen gefixt * Eingabeformular aufgeräumt

--- a/Meilenstein 2/style.css
+++ b/Meilenstein 2/style.css
@@ -34,15 +34,15 @@ h1 b {
     color: rgb(136,0,21);
 }
 
-#absenden{
+#absenden {
     float: left;
 }
 
-#favoriten{
-    float:right;
+#absenden {
+    clear: left;
 }
 
-#auswahl{
+#auswahl {
     float: left;
 }
 
